--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+This fork of the FABAN project contains a number of workarounds 
+allowing it work with the CloudStone workload. Changes are as few
+as possible.
+
+Below is the original README of the FABAN project.
+
+== == == == == == == == == == == == 
+
 Faban - An infrastructure for developing and running workload drivers
 and performance tests.
 
